--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="button" id="division" onclick="div()" value="Division"/>
         </form>
         <p>
-            Restul is : <span id="resutl"></span>
+            Restul iss : <span id="resutl"></span>
         </p>
         <script  src="index.js"> </script>
     </body>
